added api for user
